--- a/index.html
+++ b/index.html
@@ -841,7 +841,7 @@
     
     <!-- Contenedor para el título y la imagen -->
     <div class="title-container">
-        <h1 class="main-title">Flores para Titii</h1>
+        <h1 class="main-title">Flores para Marii💗</h1>
         <img src="image.png" alt="Imagen de pareja" class="title-image">
     </div>
 
