--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
 <body>
   <canvas class="webgl"></canvas>
-  <h1 class="h1text">Para Ti 💖</h1>
+  <h1 class="h1text">Para Ti Marii💖</h1>
   <button id="play-music" type="button" aria-label="Play music">
     <svg fill="currentColor" viewBox="0 0 512 512" width="100" title="music">
       <path
